<resources>
    <string name="app_name">iBake</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login">LOGIN</string>
    <string name="loading">LOADING</string>
    <string name="register">SIGN UP</string>
    <string name="add_dev_retry">RETRY</string>
    <string name="phonenumber">User name</string>
    <string name="password">Password</string>
    <string name="forgetpsw">Forget password?</string>
    <string name="agree_01">Agree to the </string>
    <string name="agree_02"> registration agreement</string>
    <string name="sendvercode">VALIDATE</string>
    <string name="inputvercode">Verification code</string>
    <string name="action_settings">search</string>
    <string name="ssid">SSID</string>
    <string name="add_dev">Add Device</string>
    <string name="virtul_dev">Virtual Device</string>
    <string name="ssid_pw">Enter password</string>
    <string name="search_dev">SEARCH</string>
    <string name="search_dev_lower">Search recipe</string>
    <string name="ssid_init">WiFi-SSID</string>
    <string name="wifipsw">Password</string>
    <string name="add_dev_next_btn">NEXT</string>
    <string name="add_dev_success_btn">OK</string>
    <string name="add_dev_success_title">Device Name</string>
    <string name="add_dev_success_input">Input device name</string>
    <string name="add_dev_btn">ADD DEVICE</string>
    <string name="enter">ENTER</string>
    <string name="init_devname">OVEN-C433</string>
    <string name="dev_share">Device sharing</string>
    <string name="auth_user">Authorized User</string>
    <string name="dev_ctrl_pause">PAUSE</string>
    <string name="dev_ctrl_stop">STOP</string>
    <string name="dev_ctrl_sart">START</string>
    <string name="add_dev_next_txt">Press the network button on the device for more than 3 seconds until the WiFi icon flashes into the next state.</string>
    <string name="failure_title">Follow these steps to troubleshoot possible problems and try again.</string>
    <string name="failure_body01">Verify that yourdevices is follow the prompts at the start, set to Distribution Networks.</string>
    <string name="failure_body02">Make sure password is correct.</string>
    <string name="failure_body03">Ensure that the device and not too far away from home router.</string>
    <string name="failure_body04">Make sure your router is set to 2.4GHZ.</string>
    <string name="failure_body05">After rule out the above questions to distribution network.</string>
    <string name="qrcode_des">Scan the QR Code to control the device.</string>

    <string name="dev_ctrl_recomd">SWEET TIME</string>
    <string name="uptemptxt">Up.Temp</string>
    <string name="downtemptxt">Down.Temp</string>
    <string name="baketimetxt">Bake.Time</string>
    <string name="preheattxt">Preheat</string>
    <string name="inittemp">105℃</string>
    <string name="inittime">30min</string>
    <string name="tempmark">℃</string>

    <string name="circle_pretime">Preheat Time</string>
    <string name="min_mark">(min)</string>

    <string name="initusername">xuyx@mxchip.com</string>
    <string name="initpassword">123456</string>

    <string name="user_finish">FINISHED</string>
    <string name="ent_password">Please enter your password</string>
    <string name="ent_password_confirm">Please enter your password again</string>

    <string name="reset_psw_title">Reset the password by phone or email</string>
    <string name="reset_psw_input">Enter your registered user name</string>
    <string name="submit">SUBMIT</string>
    <string name="resend">RESEND</string>
    <string name="cancel">CANCEL</string>
    <string name="addsteps">ADD STEPS</string>
    <string name="cancel_lower">Cancel</string>
    <string name="reset_psw_code_title">Verification code has been sent success</string>

    <string name="fd_finddevice">Finding device</string>
    <string name="fd_registerdevice">Register device</string>
    <string name="fd_binddevice">Binding device</string>

    <string name="cloud_cb_offical">OFFICAL</string>
    <string name="cloud_cb_other">OTHER</string>
    <string name="cloud_cb_bread">BREAD</string>
    <string name="cloud_cb_cake">CAKE</string>
    <string name="cloud_cb_biscuit">BISCUIT</string>
    <string name="cloud_cb_pizza">PIZZA</string>
    <string name="cloud_cb_fish">FISH</string>
    <string name="cloud_cb_meat">MEAT</string>
    <string name="cloud_cb_chicken">CHICKEN</string>
    <string name="cloud_cb_eggtant">EGG TANT</string>
    <string name="cloud_cb_muffin">MUFFIN</string>

    <string name="recipe_dd_cakename">Strawberry Cake</string>
    <string name="recipe_dd_descript">Because my daughter love to eat sweets, I began to study how to do it, and now I upload the cooking process for everyone.</string>
    <string name="recipe_dd_utensilsname">Utensils</string>
    <string name="recipe_dd_utensils">An oven, microwave oven, large bowl of 3, kettle, frying pan, egg beater, pan three.</string>
    <string name="recipe_dd_butter">butter</string>
    <string name="recipe_dd_butterkg">300</string>
    <string name="recipe_dd_seemore">See more...</string>
    <string name="recipe_bake_step_title">Baking steps:</string>
    <string name="recipe_bake_step_no">1/2</string>
    <string name="recipe_bake_step_des">Chopped 3 in 180℃ oven baked sausage 12 minutes, until golden brown pastry to form.</string>
    <string name="ingredient">Ingredients</string>
    <string name="quantity">Quantity</string>
    <string name="kitchenu_utensils">Kitchen Utensils</string>

    <string name="recipe_ed_addpic">ADD PICTURE</string>
    <string name="recipe_ed_recip_nametitle">Recipe Name</string>
    <string name="recipe_ed_descripttitle">Recipe Description</string>
    <string name="recipe_ed_dessteptitle">Describe Steps</string>

    <string name="recipe_ed_recip_nametxt_hint">Please enter a recipe name.</string>
    <string name="recipe_ed_recip_destxt_hint">What do you want to share with everyone?</string>
    <string name="add_ingredient">Add + </string>

    <string name="uptemp">Up.Temp</string>
    <string name="downtemp">Down.Temp</string>

    <string name="flour">flour</string>
    <string name="bowl">bowl</string>
    <string name="flourkg">300</string>
    <string name="need_kg">300g</string>

    <string name="celsius">°C</string>
    <string name="gram">g</string>
</resources>
