<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_layout_height"
        android:background="@drawable/layer_list" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/icon_margin_left"
            android:layout_marginRight="@dimen/icon_margin_right"
            android:src="@drawable/login_phone_number" />

        <EditText
            android:id="@+id/rg_username_etid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/phonenumber"
            android:textColorHint="@color/txt_color_hint"
            android:textColor="@color/sin_6"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/common_text_size">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_layout_height"
        android:background="@drawable/layer_list" >

        <EditText
            android:id="@+id/rg_vercode_etid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:layout_marginLeft="@dimen/icon_margin_left"
            android:paddingLeft="@dimen/varcode_input_padding"
            android:hint="@string/inputvercode"
            android:inputType="number"
            android:textColor="@color/sin_6"
            android:textColorHint="#CCCCCC"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/common_text_size" >
        </EditText>

        <Button
            android:id="@+id/rg_getvercode_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:textColor="@color/common_btn_txtcolor"
            android:text="@string/sendvercode"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_layout_height"
        android:background="@drawable/layer_list" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/icon_size_min"
            android:layout_height="@dimen/icon_size_min"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/icon_margin_min_left"
            android:layout_marginRight="@dimen/icon_margin_min_right"
            android:src="@drawable/register_agree" />

        <TextView
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:text="@string/agree_01"
            android:textColor="@color/txt_color_hint"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/common_text_min2" >

        </TextView>

        <TextView
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/agree_02"
            android:textColor="@color/colorAccent"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/common_text_min2" >

        </TextView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/rg_signup_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_btn_height"
            android:layout_alignParentBottom="true"
            android:background="#FCCB0F"
            android:text="@string/register"
            android:textColor="@color/common_btn_txtcolor"
            android:textSize="@dimen/common_button_txtsize" />
    </RelativeLayout>

</LinearLayout>