<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sin_bg_color"
    android:fitsSystemWindows="true">

    <include layout="@layout/app_bar_title" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_bar_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/dev_ctrl_detail" />

            <LinearLayout
                android:id="@+id/frameSwitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/sin_bg_color"
                android:layout_marginBottom="@dimen/input_btn_height"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/loading" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/devctrl_stop_lyid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/devctrl_stop_pausebtn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/input_btn_height"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/dev_ctrl_pause"
                android:textColor="@color/common_btn_txtcolor"
                android:textSize="@dimen/common_button_txtsize" />

            <Button
                android:id="@+id/devctrl_stop_stopbtn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/input_btn_height"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/dev_ctrl_stop"
                android:textColor="@color/common_btn_txtcolor"
                android:textSize="@dimen/common_button_txtsize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/devctrl_start_lyid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/devctrl_start_startid"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/input_btn_height"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/dev_ctrl_sart"
                android:textColor="@color/common_btn_txtcolor"
                android:textSize="@dimen/common_button_txtsize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/devctrl_ok_lyid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/devctrl_ok_cancelbtn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/input_btn_height"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/cancel"
                android:textColor="@color/common_btn_txtcolor"
                android:textSize="@dimen/common_button_txtsize" />

            <Button
                android:id="@+id/devctrl_ok_okbtn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/input_btn_height"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/add_dev_success_btn"
                android:textColor="@color/common_btn_txtcolor"
                android:textSize="@dimen/common_button_txtsize" />
        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>