<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/title_bar_height"
    android:background="@color/sin_bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/easylink_img_size"
        android:layout_height="@dimen/easylink_img_size"
        android:layout_marginTop="@dimen/easylink_margin_top"
        android:src="@drawable/add_device_connect" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_layout_height"
            android:layout_marginLeft="@dimen/easylink_margin_top"
            android:layout_marginRight="@dimen/easylink_margin_top"
            android:layout_marginTop="@dimen/easylink_margin_top"
            android:background="@drawable/corners_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/easylink_margin_top"
                android:text="@string/ssid_init" />

            <EditText
                android:id="@+id/add_dev_ssid_etid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/easylink_margin_top"
                android:background="@color/input_edittext_bg"
                android:editable="false"
                android:hint="@string/ssid"
                android:text="@string/ssid_init"
                android:textColor="@color/colorPrimary"
                android:textCursorDrawable="@null" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_layout_height"
            android:layout_marginLeft="@dimen/easylink_margin_top"
            android:layout_marginRight="@dimen/easylink_margin_top"
            android:layout_marginTop="@dimen/easylink_margin_top"
            android:background="@drawable/corners_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/easylink_margin_top"
                android:text="@string/wifipsw" />

            <EditText
                android:id="@+id/add_dev_psw_etid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/easylink_margin_top"
                android:background="@color/input_edittext_bg"
                android:focusable="true"
                android:hint="@string/ssid_pw"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/txt_color_hint"
                android:textCursorDrawable="@null" />

        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/searchdev_btnid"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_btn_height"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:text="@string/search_dev"
            android:textColor="@color/common_btn_txtcolor"
            android:textSize="@dimen/common_button_txtsize" />
    </RelativeLayout>
</LinearLayout>
