<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/title_bar_height"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_layout_height"
        android:background="@drawable/layer_list"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_layout_height"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/reset_psw_code_title"
            android:textSize="@dimen/common_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_layout_height"
        android:layout_marginTop="@dimen/easylink_margin_top"
        android:background="@drawable/layer_list" >

        <EditText
            android:id="@+id/rsp_vercode_etid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:layout_marginLeft="@dimen/icon_margin_left"
            android:paddingLeft="@dimen/varcode_input_padding"
            android:hint="@string/inputvercode"
            android:inputType="number"
            android:textColor="@color/sin_6"
            android:textColorHint="#CCCCCC"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/common_text_size" >
        </EditText>

        <Button
            android:id="@+id/rsp_regetvercode_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:textColor="@color/common_btn_txtcolor"
            android:text="@string/resend"
            android:textSize="16dp" />

    </LinearLayout>
</LinearLayout>