<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/title_bar_height"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_layout_height"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/layer_list">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_layout_height"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/phonenumber"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/sp_username_tvid"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_layout_height"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/initusername" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_layout_height"
        android:layout_marginTop="@dimen/common_item_margin"
        android:background="@drawable/layer_list">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/icon_margin_left"
            android:layout_marginRight="@dimen/icon_margin_right"
            android:src="@drawable/login_password" />

        <EditText
            android:id="@+id/sp_psw_etid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/ent_password"
            android:textColor="@color/sin_6"
            android:textColorHint="@color/txt_color_hint"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/common_text_size"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_layout_height"
        android:background="@drawable/layer_list">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/icon_margin_left"
            android:layout_marginRight="@dimen/icon_margin_right"
            android:src="@drawable/login_password_confirm" />

        <EditText
            android:id="@+id/sp_psw_cf_etid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/ent_password_confirm"
            android:textColor="@color/sin_6"
            android:textColorHint="@color/txt_color_hint"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/common_text_size"></EditText>
    </LinearLayout>
</LinearLayout>