<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/title_bar_height"
    android:background="@color/sin_bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_layout_height"
            android:layout_marginLeft="@dimen/easylink_margin_top"
            android:layout_marginRight="@dimen/easylink_margin_top"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_dev_success_title"
                android:id="@+id/textView2"
                android:layout_gravity="center"
                android:textSize="@dimen/common_text_size"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_layout_height"
            android:layout_marginLeft="@dimen/easylink_margin_top"
            android:layout_marginRight="@dimen/easylink_margin_top"
            android:background="@drawable/corners_bg"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/submit_newdevname_etid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="@dimen/input_txt_padding"
                android:background="@color/input_edittext_bg"
                android:focusable="true"
                android:hint="@string/add_dev_success_input"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/txt_color_hint"
                android:textCursorDrawable="@null" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/submit_newdevname_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_btn_height"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:text="@string/add_dev_success_btn"
            android:textColor="@color/common_btn_txtcolor"
            android:textSize="@dimen/common_button_txtsize" />

    </RelativeLayout>
</LinearLayout>
